service/deploy/deployment-dev.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-world
  namespace: dev
spec:
  replicas: 2
  selector:
    matchLabels:
      app: hello-world
  template:
    metadata:
      labels:
        app: hello-world
    spec:
      containers:
      - name: hello-world
        image: bepython/hello-world:latest 
        ports:
        - containerPort: 5000
